# Libjpeg-turbo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/android/libjpeg_turbo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: jpeglib.h
app/src/main/java/com/android/libjpeg_turbo/: ImageCache.java  ImageResize.java  MainActivity.java  MyAdpter.java
app/src/main/res/layout/: activity_main.xml  item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/libjpeg_turbo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
